Added swagger doc for route get current user info
